<resources>
    <string name="app_name">lunchbox</string>
    <string name="home">Home</string>
    <string name="search">search</string>
    <string name="setting">setting</string>
    <string name="myplace">myplace</string>
    <string name="profile">profile</string>
    <string name="create_new_account">이메일로 초간단 가입</string>
    <string name="Log_In">이미 회원이세요? 로그인</string>
    <string name="send_email">Send email</string>
    <string name="full_name">Full name</string>
    <string name="code">CODE</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="cpassword">Password</string>
    <string name="create_google">구글계정으로 1초만에 가입</string>
    <string name="create_email">이메일로 초간단 가입</string>
    <string name="create_facebook">페이스북으로 1초만에 가입</string>
    <string name="create_kakao">카카오계정으로 1초만에 가입</string>

    <!--<로이작성>-->
    <string name="title_activity_setting">SettingActivity</string>
    <string name="setting_name">설정</string>
    <string name="setting_main_category1">서비스 안내</string>
    <string name="setting_main_category2">약관 및 정책</string>
    <string name="setting_main_category3">고객센터</string>
    <string name="setting_sub1_category1">공지사항</string>
    <string name="setting_sub1_category2">버전 정보</string>
    <string name="setting_versionVal">( 1.0.0 )</string>
    <string name="setting_sub2_category1">서비스 이용약관</string>
    <string name="setting_sub2_category2">개인정보처리방침</string>
    <string name="setting_sub2_category3">위치기반 서비스 이용약관</string>
    <string name="setting_sub3_category1">1:1 문의하기</string>
    <string name="title_activity_setting_fragment">SettingFragment</string>
    <string name="title_activity_setting_fragment_notice">SettingFragmentNotice</string>
    <string name="title_activity_setting_fragment_service">SettingFragmentService</string>
    <string name="title_activity_setting_fragment_personal">SettingFragmentPersonal</string>
    <string name="title_activity_setting_fragment_gps">SettingFragmentGps</string>

    <string name="search_detail_price">가격</string>
    <string name="search_detail_category">음식 분류</string>
    <string name="search_detail_dist">거리(도보 기준)</string>


    <!--</로이작성>-->

    <!--<가람작성>-->
    <string name="txt_title">런치박스</string>
    <!--</가람작성>-->

    <!--</지연작성>-->
    <string name="back_dialog_title">런치박스를 종료하시겠습니까?</string>
    <string name="menu_picker_start">런치 메뉴박스 PLAY</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="searchBtn">지연검색</string>
    <!--</지연작성>-->

    <!--용-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_title">런치박스</string>
    <string name="profile_settings">프로필</string>
    <string name="profile_permission">프로필 권한설정</string>
    <string name="profile_history">프로필 history</string>
    <string name="alarm_title">알람을 설정해보세요</string>
    <string name="alarmYn">alarmYn</string>
    <string name="settingAlarm">알람 설정</string>
    <!--석-->

</resources>
