<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_home2"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard2"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

=======
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/home"
        android:id="@+id/navigation_home"
        android:icon="@drawable/bottom_home"/>

    <item
        android:title="@string/alarm"
        android:id="@+id/navigation_alarm"
        android:icon="@drawable/bottom_alarm"/>

    <item
        android:title="@string/search"
        android:id="@+id/navigation_search"
        android:icon="@drawable/bottom_search"/>

    <item
        android:title="@string/profile"
        android:id="@+id/navigation_profile"
        android:icon="@drawable/bottom_profile"/>

    <item
        android:title="@string/setting"
        android:id="@+id/navigation_setting"
        android:icon="@drawable/bottom_setting" />
>>>>>>> origin/master
</menu>
